one last time try4

--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     },
     "dependencies": {
         "electron-compile": "^6.4.4",
+        "electron-log": "^4.1.1",
         "electron-squirrel-startup": "^1.0.0",
         "electron-updater": "^4.2.5",
         "update-electron-app": "^1.5.0"
